# dev_kb_repo

./: README.md
HarmonyOS_Samples-guide-snippets/Ability/AppStartup/entry/src/main/cpp/: CMakeLists.txt  napi_init1.cpp  napi_init2.cpp  napi_init3.cpp  napi_init4.cpp  napi_init5.cpp  napi_init6.cpp
HarmonyOS_Samples-guide-snippets/Ability/AppStartup/entry/src/main/cpp/types/libentry1/: oh-package.json5
HarmonyOS_Samples-guide-snippets/Ability/AppStartup/entry/src/main/cpp/types/libentry2/: oh-package.json5
HarmonyOS_Samples-guide-snippets/Ability/AppStartup/entry/src/main/cpp/types/libentry3/: oh-package.json5
HarmonyOS_Samples-guide-snippets/Ability/AppStartup/entry/src/main/cpp/types/libentry4/: oh-package.json5
HarmonyOS_Samples-guide-snippets/Ability/AppStartup/entry/src/main/cpp/types/libentry5/: Index.d.ts  oh-package.json5
HarmonyOS_Samples-guide-snippets/Ability/AppStartup/entry/src/main/cpp/types/libentry6/: oh-package.json5
HarmonyOS_Samples-guide-snippets/Ability/AppStartup/hsp1/src/main/cpp/: CMakeLists.txt  napi_init1.cpp  napi_init2.cpp
HarmonyOS_Samples-guide-snippets/Ability/AppStartup/hsp1/src/main/cpp/types/libhsp11/: oh-package.json5
HarmonyOS_Samples-guide-snippets/Ability/AppStartup/hsp1/src/main/cpp/types/libhsp12/: oh-package.json5
HarmonyOS_Samples-guide-snippets/Ability/NativeChildProcessExit/entry/src/main/cpp/: CMakeLists.txt  MainProcessFile.cpp  MainProcessFile.h
HarmonyOS_Samples-guide-snippets/Ability/NativeChildProcessExit/entry/src/main/cpp/types/libmainprocesssample/: index.d.ets
HarmonyOS_Samples-guide-snippets/Ability/NativeChildProcessIpc/entry/src/main/cpp/: CMakeLists.txt  ChildProcess.cpp  ChildProcess.h  ChildProcessSample.cpp  ChildProcessSample.h  IpcInterface.cpp  IpcInterface.h  IpcProxy.cpp  IpcProxy.h  IpcStub.cpp  IpcStub.h  Ipchelper.h  MainProcessSample.cpp  MainProcessSample.h  loghelper.h
HarmonyOS_Samples-guide-snippets/Ability/NativeChildProcessIpc/entry/src/main/cpp/types/libchildprocesssample/: oh-package.json5
HarmonyOS_Samples-guide-snippets/ArkGraphics2D/Drawing/NDKGraphicsDraw/entry/src/main/cpp/: CMakeLists.txt
HarmonyOS_Samples-guide-snippets/ArkGraphics2D/Drawing/NDKGraphicsDraw/entry/src/main/cpp/samples/: sample_graphics.cpp  sample_graphics.h
HarmonyOS_Samples-guide-snippets/ArkTS/ArkTSCompilationToolchain/ArkGuardForSourceCodeObfuscation/CodeObfuscationIssues/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
HarmonyOS_Samples-guide-snippets/ArkUISample/NDKWaterFlowSample/entry/src/main/cpp/: ArkUIBaseNode.h  ArkUINode.h  CMakeLists.txt  CreateWaterflowExample.h  FlowItemAdapter.h  NativeEntry.cpp  NativeEntry.h  NativeModule.h  WaterflowSection.h  napi_init.cpp  waterflow.h
HarmonyOS_Samples-guide-snippets/ArkUISample/NDKWaterFlowSample/entry/src/main/cpp/types/libentry/: Index.d.ts  oh-package.json5
HarmonyOS_Samples-guide-snippets/ArkUISample/NativeDisplayBasicSample/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
HarmonyOS_Samples-guide-snippets/ArkUISample/NativeDisplayBasicSample/entry/src/main/cpp/types/libnativedisplay/: Index.d.ts  oh-package.json5
HarmonyOS_Samples-guide-snippets/ArkUISample/NativeType/CustomDrawSample/entry/src/main/cpp/: ArkUIBaseNode.h  ArkUICustomContainerNode.h  ArkUICustomNode.h  ArkUINode.h  ArkUITextNode.h  CMakeLists.txt  NapiInit.cpp  NativeEntry.cpp  NativeEntry.h  NativeModule.h  UITimer.h
HarmonyOS_Samples-guide-snippets/ArkUISample/NativeType/NdkEmbedArktsComponents/entry/src/main/cpp/: ArkUIBaseNode.h  ArkUIListItemNode.h  ArkUIListNode.h  ArkUIMixedNode.h  ArkUIMixedRefresh.cpp  ArkUIMixedRefresh.h  ArkUIMixedRefreshTemplate.cpp  ArkUIMixedRefreshTemplate.h  ArkUINode.h  ArkUITextNode.h  CMakeLists.txt  MixedRefreshExample.h  NapiInit.cpp  NativeEntry.cpp  NativeEntry.h  NativeModule.h  NormalTextListExample.h  UITimer.h
HarmonyOS_Samples-guide-snippets/ArkUISample/NativeType/NdkEmbedArktsComponents/entry/src/main/cpp/types/libentry/: Index.d.ts
HarmonyOS_Samples-guide-snippets/ArkUISample/NdkScopeTask/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
HarmonyOS_Samples-guide-snippets/ArkUISample/NdkScopeTask/entry/src/main/cpp/types/libentry/: Index.d.ts
HarmonyOS_Samples-guide-snippets/FunctionFlowRuntimeKit/ConcurrentQueue/entry/src/main/cpp/: CMakeLists.txt  concurrent_queue.cpp  concurrent_queue_cpp.cpp  napi_init.cpp
HarmonyOS_Samples-guide-snippets/FunctionFlowRuntimeKit/ConcurrentQueue/entry/src/main/cpp/types/libentry/: Index.d.ts
HarmonyOS_Samples-guide-snippets/Media/Camera/NDKDeferredCaptureSample/entry/src/main/cpp/: CMakeLists.txt  camera_manager.cpp
HarmonyOS_Samples-guide-snippets/Media/Camera/NDKDeferredCaptureSample/entry/src/main/cpp/types/libentry/: index.d.ts
HarmonyOS_Samples-guide-snippets/Media/Image/ImageNativeSample/entry/src/main/cpp/: CMakeLists.txt  imageKits.h  loadAllocator.cpp  loadImageSource.cpp  loadPicture.cpp  loadReceiver.cpp  loadReceiver.h  napi_init.cpp
HarmonyOS_Samples-guide-snippets/PerformanceAnalysisKit/HiAppEvent/EventSub/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
HarmonyOS_Samples-guide-snippets/PerformanceAnalysisKit/HiDebugTool/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  test_backtrace.cpp  test_backtrace.h  test_malloc_dispatch.cpp  test_malloc_dispatch.h
HarmonyOS_Samples-guide-snippets/PerformanceAnalysisKit/HiDebugTool/entry/src/main/cpp/types/libentry/: Index.d.ts
HarmonyOS_Samples-guide-snippets/Security/CryptoArchitectureKit/EncryptionDecryption/EncryptionDecryptionGuidanceCpp/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
HarmonyOS_Samples-guide-snippets/Security/UniversalKeystoreKit/KeyUsage/EncryptionDecryption/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
HarmonyOS_Samples-guide-snippets/Security/UniversalKeystoreKit/KeyUsage/SigningVerification/entry/src/main/cpp/: CMakeLists.txt  ecc_sha256_sign_verify.cpp  napi_init.cpp  rsa_sha256_pkcs1_v1_5_sign_verify.cpp  rsa_sha256_pss_sign_verify.cpp  rsa_sha384_pss_sign_verify.cpp  sign_verify.h  sm2_nodigest_sign_verify.cpp  sm2_sm3_sign_verify.cpp
(+16201 files in other folders)
